--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "puppet/modules/newrelic"]
 	path = puppet/modules/newrelic
 	url = git@github.com:mwillbanks/puppet-newrelic.git
+[submodule "puppet/modules/redis"]
+	path = puppet/modules/redis
+	url = git@github.com:thomasvandoren/puppet-redis.git
