--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "puppet/modules/redis"]
 	path = puppet/modules/redis
 	url = git@github.com:thomasvandoren/puppet-redis.git
+[submodule "puppet/modules/wget"]
+	path = puppet/modules/wget
+	url = git@github.com:maestrodev/puppet-wget.git
