--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "puppet/modules/wget"]
 	path = puppet/modules/wget
 	url = git@github.com:maestrodev/puppet-wget.git
+[submodule "puppet/modules/gcc"]
+	path = puppet/modules/gcc
+	url = git@github.com:puppetlabs/puppetlabs-gcc.git
